Fix header collapse menu

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
@@ -11,7 +11,7 @@
 @import "codemirror.scss";
 @import "jquery-ui-datepicker-override.scss";
 
-$top-nav-height: 49px;
+$top-nav-height: 59px;
 $footer-height: 40px;
 $left-navigation-width: 260px;
 $left-navigation-width-when-compact: 48px;
@@ -66,19 +66,27 @@ body {
 
 .ta-navbar-top {
     @extend .navbar, .navbar-expand-md, .navbar-light, .fixed-top;
-    height: $top-nav-height;
     border-bottom: $border-content;
-    z-index: $zindex-sticky;
+    z-index: calc($zindex-sticky + 1);
     padding-left: 0px;
     background-color: white;
+    box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,0.03), 0 0.9375rem 1.40625rem rgba(4,9,20,0.03), 0 0.25rem 0.53125rem rgba(4,9,20,0.05), 0 0.125rem 0.1875rem rgba(4,9,20,0.03);
 
     .nav-link {
         font-size: 14px;
     }
 
+    .nav-item {
+        text-align: right;
+    }
+
     .breadcrumb {
         background-color: transparent;
         margin-top: 1rem;
+    }
+
+    .btn.nav-link{
+        display: inline-block;
     }
 }
 
